# chat_memory

./: .env  .gitignore  0.2.27  pyproject.toml
chroma_db/: chroma.sqlite3
src/: main.py
src/config/: config.py
src/db/: vector.py
src/store/: memory.py  store.py
